--- a/CalculadoraDepreciacao/assets/css/style.css
+++ b/CalculadoraDepreciacao/assets/css/style.css
@@ -8,20 +8,10 @@ body {
     height: 100vh;
     width: 100vw;
     background: rgb(1, 0, 23);
-    background: linear-gradient(120deg, rgba(1, 0, 23, 1) 0%, rgb(0, 6, 119) 41%, rgb(6, 6, 6) 100%);
+    background: aliceblue;
     display: flex;
     align-items: center;
     justify-content: center;
-}
-
-.container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-color: rgba(18, 226, 209, 0.8);
-    border-radius: 8px;
-    padding: 20px;
 }
 
 .forme {
